add item endpoints

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "init": "swaglow init -o swagger",
     "build:yaml": "swaglow build -i swagger -o output && swagger-tools validate output/swagger.yml",
     "build:code": "java -jar ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar generate -i output/swagger.yml -o output/code -l ",
-    "build:java": "npm-run-all -s build:yaml \"build:code -- java\"",
-    "build:swift3": "npm-run-all -s build:yaml \"build:code -- swift3\"",
+    "build:java": "npm-run-all -s build:yaml clean:code \"build:code -- java\"",
+    "build:swift3": "npm-run-all -s build:yaml clean:code \"build:code -- swift3\"",
     "clean:bin": "rm -rf bin && mkdir bin",
     "clean:code": "rm -rf output/code && mkdir output/code"
   },
