--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "qiita-swagger-yaml",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "install": "[ -f ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar ] || (npm run clean:bin && wget http://central.maven.org/maven2/io/swagger/swagger-codegen-cli/$npm_package_config_swagger_version/swagger-codegen-cli-$npm_package_config_swagger_version.jar -O ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar)",
     "init": "swaglow init -o swagger",
-    "build:yaml": "swaglow build -i swagger -o output && swagger-tools validate output/swagger.yml",
+    "sync:version": "node bin/version.js",
+    "build:yaml": "npm run sync:version && swaglow build -i swagger -o output && swagger-tools validate output/swagger.yml",
     "build:code": "java -jar ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar generate -i output/swagger.yml -o output/code -l ",
     "build:java": "npm-run-all -s build:yaml clean:code \"build:code -- java\"",
     "build:swift": "npm-run-all -s build:yaml clean:code \"build:code -- swift3 -c config.swift.json\"",
