--- a/config.swift.json
+++ b/config.swift.json
@@ -2,8 +2,7 @@
     "projectName": "CHQiitaApiClient",
     "unwrapRequired": "true",
     "responseAs": "RxSwift",
-    "podSource": "{ :git => \"https://github.com/chuross/qiita-api-client.git\", :tag => \"0.0.1\" }",
-    "podVersion": "0.0.1",
+    "podSource": "{ :git => \"https://github.com/chuross/qiita-api-client.git\", :tag => \"#{s.version}\" }",
     "podAuthors": "chuross",
     "podHomepage": "https://github.com/chuross/qiita-api-client",
     "podSummary": "qiita client"
