--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "install": "[ -f ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar ] || (npm run clean:bin && wget http://central.maven.org/maven2/io/swagger/swagger-codegen-cli/$npm_package_config_swagger_version/swagger-codegen-cli-$npm_package_config_swagger_version.jar -O ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar)",
+    "preinstall": "[ -f ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar ] || (npm run clean:bin && wget http://central.maven.org/maven2/io/swagger/swagger-codegen-cli/$npm_package_config_swagger_version/swagger-codegen-cli-$npm_package_config_swagger_version.jar -O ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar)",
     "init": "swaglow init -o swagger",
     "build:yaml": "swaglow build -i swagger -o output && swagger-tools validate output/swagger.yml",
     "build:code": "java -jar ./bin/swagger-codegen-cli-$npm_package_config_swagger_version.jar generate -i output/swagger.yml -o output/code -l ",
@@ -20,9 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "swaglow": "^1.0.4"
-  },
-  "devDependencies": {
+    "swaglow": "^1.0.4",
     "npm-run-all": "^4.1.1",
     "swagger-tools": "^0.10.1"
   }
